hotstyle(resume): fix grid issues on mobile

--- a/resume/src/components/Container/Container.module.css
+++ b/resume/src/components/Container/Container.module.css
@@ -1,11 +1,13 @@
 .container {
   width: 100%;
-  padding: 4rem 0;
+  padding: 4rem 0.8rem;
 }
 
 @media (min-width: 66rem) {
   .container {
     max-width: 60rem;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
